changed layout for gosify

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,41 +1,26 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
-    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  line-height: 1.6;
-  font-size: 18px;
-}
-.grid {
-    display: grid;
-    grid-template-columns: 150px auto 150px;
-    grid-template-rows: repeat(3, 100px);
-    grid-gap: 1em;
-  }
+
+  font-family: 'Playfair Display', serif;
+
+  background: linear-gradient(270deg, #201f1f, #272522, #3f3935);
+  background-size: 600% 600%;
   
-  header,
-  aside,
-  article,
-  footer {
-    background: #eaeaea;
-    padding: 1em;
-  }
+  animation: Gradient 20s ease infinite;
+
+}
+  
+
+@keyframes Gradient {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
   
   header, footer {
-    grid-column: 1 / 4;
+    padding: 0.5rem;
+    
   }
   
-  /* Demo Specific Styles */
-  body {
-    margin: 0 auto;
-    max-width: 56em;
-    padding: 1em 0;
-  }
-  
-  .grid > * {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+
   
