--- a/styles/global.css
+++ b/styles/global.css
@@ -3,10 +3,10 @@ body {
 
   font-family: 'Playfair Display', serif;
 
-  background: linear-gradient(270deg, #201f1f, #272522, #3f3935);
-  background-size: 600% 600%;
+  padding: 0%;
+  margin: 0%;
   
-  animation: Gradient 20s ease infinite;
+
 
 }
   
